# xings-user-accounts

./: .gitignore  AUTHORS  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
.github/: FUNDING.yml
data/: .gitignore  Makefile.am  org.xings.user-accounts.gschema.xml.in  user-accounts-dialog.ui  user-accounts.css  xings-user-accounts.desktop.in
data/appdata/: Makefile.am  org.xings.UserAccounts.metainfo.xml.in
data/faces/: Makefile.am
data/icons/: Makefile.am
man/: Makefile.am  xings-user-accounts.sgml
po/: .gitignore  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  (+67 more)
src/: .gitignore  Makefile.am  cc-crop-area.c  cc-user-panel.c  cc-user-panel.h  frob-account-dialog.c  pw-utils.c  run-passwd.c  um-account-dialog.c  um-account-dialog.h  um-account-type.c  um-cell-renderer-user-image.c  um-cell-renderer-user-image.h  um-fingerprint-dialog.c  um-history-dialog.c  um-password-dialog.c  um-photo-dialog.c  um-realm-manager.c  um-user-image.c  um-utils.c  um-utils.h  xings-user-accounts-common.h  xings-user-accounts.c
